Add hello-moon buildpack to show usage of dependencies
Signed-off-by: Javier Romero <jromero@pivotal.io>

--- a/buildpacks/hello-moon/bin/build
+++ b/buildpacks/hello-moon/bin/build
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 set -eo pipefail
 
-echo "---> Hello World buildpack"
+echo "---> Hello Moon buildpack"
 
 env_dir=$2/env
 layers_dir=$1
