--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -30,7 +30,7 @@ maven_version="3.5.4"
 echo "---> Installing JDK"
 
 # If it doesn't exist locally, create a JDK cache layer
-# This makes JDK available to subsequent buildpacks as well.
+# This makes JDK available to subsequent buildpacks as well
 jdk_layer_dir=${layers_dir}/jdk
 if [[ -f ${jdk_layer_dir}.toml ]]; then
   cached_jdk_url=$(cat "${jdk_layer_dir}.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'JDK TOML parsing failed')
