--- a/buildpacks/ruby-bundler/bin/build
+++ b/buildpacks/ruby-bundler/bin/build
@@ -12,14 +12,14 @@ ruby_layer_dir="${layers_dir}/ruby"
 mkdir -p "${ruby_layer_dir}"
 
 # determine ruby version provided during detection
-ruby_version=$(cat "${plan_path}" | /tmp/yj -t | /tmp/jq -r '.entries[] | select(.name == "ruby") | .version')
+ruby_version=$(cat "${plan_path}" | yj -t | jq -r '.entries[] | select(.name == "ruby") | .version')
 
 echo "---> Downloading and extracting Ruby ${ruby_version}"
 ruby_url=https://s3-external-1.amazonaws.com/heroku-buildpack-ruby/heroku-18/ruby-${ruby_version}.tgz
 wget -q -O - "${ruby_url}" | tar -xzf - -C "${ruby_layer_dir}"
 
 # 3. MAKE RUBY AVAILABLE DURING LAUNCH
-cat >> "${ruby_layer_dir}.toml" <<EOL
+cat > "${ruby_layer_dir}.toml" <<EOL
 launch = true
 metadata = "${ruby_version}"
 EOL
@@ -37,7 +37,7 @@ gem install bundler --no-ri --no-rdoc
 # Compares previous Gemfile.lock checksum to the current Gemfile.lock
 bundler_layer_dir="${layers_dir}/bundler"
 local_bundler_checksum=$(sha256sum Gemfile.lock | cut -d ' ' -f 1) 
-remote_bundler_checksum=$(cat "${bundler_layer_dir}.toml" | /tmp/yj -t | /tmp/jq -r .metadata 2>/dev/null || echo 'not found')
+remote_bundler_checksum=$(cat "${bundler_layer_dir}.toml" | yj -t | jq -r .metadata 2>/dev/null || echo 'not found')
 
 if [[ -f Gemfile.lock && ${local_bundler_checksum} == ${remote_bundler_checksum} ]] ; then
   # Determine if no gem dependencies have changed, so it can reuse existing gems without running bundle install
@@ -48,7 +48,7 @@ else
   # Determine if there has been a gem dependency change and install new gems to the bundler layer; re-using existing and un-changed gems
   echo "---> Installing gems"
   mkdir "${bundler_layer_dir}"
-  cat >> "${bundler_layer_dir}.toml" <<EOL
+  cat > "${bundler_layer_dir}.toml" <<EOL
 cache = true
 launch = true
 metadata = "${local_bundler_checksum}"
@@ -57,7 +57,7 @@ EOL
 fi
 
 # 7. SET DEFAULT START COMMAND
-cat >> "${layers_dir}/launch.toml" <<EOL
+cat > "${layers_dir}/launch.toml" <<EOL
 [[processes]]
 type = "web"
 command = "bundle exec ruby app.rb"
