--- a/stacks/bionic/base/Dockerfile
+++ b/stacks/bionic/base/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:bionic
+
 ARG cnb_uid=1000
 ARG cnb_gid=1000
 
@@ -7,11 +8,10 @@ RUN apt-get update && \
   apt-get install -y xz-utils ca-certificates && \
   rm -rf /var/lib/apt/lists/*
 
+# Create user and group
 RUN groupadd cnb --gid ${cnb_gid} && \
   useradd --uid ${cnb_uid} --gid ${cnb_gid} -m -s /bin/bash cnb
 
+# Set required CNB information
 ENV CNB_USER_ID=${cnb_uid}
 ENV CNB_GROUP_ID=${cnb_gid}
-
-COPY ./bin/jq-linux64 /usr/local/bin/jq
-COPY ./bin/yj-linux /usr/local/bin/yj
