--- a/stacks/bionic/run/Dockerfile
+++ b/stacks/bionic/run/Dockerfile
@@ -1,9 +1,9 @@
 ARG base_image
-
 FROM ${base_image}
 
+# Set required CNB information
 ARG stack_id
-
-USER cnb
-
 LABEL io.buildpacks.stack.id="${stack_id}"
+
+# Set user and group (as declared in base image)
+USER ${CNB_USER_ID}:${CNB_GROUP_ID}
