--- a/stacks/nanoserver-1809/base/Dockerfile
+++ b/stacks/nanoserver-1809/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/windows/nanoserver:1809
+FROM mcr.microsoft.com/windows/nanoserver:1809-KB4534273
 ARG cnb_uid=S-1-1-0
 ARG cnb_gid=S-1-1-0
 
